Fix card layout overflow

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,51 +1,10 @@
 .card {
     max-width: 500px;
     margin: 0 auto;
-    padding-top: 38px;
-    margin-top: 24px;
-    border-radius: 15px;
-
-    position: relative;
-    overflow: hidden;
 
     @media only screen and (min-width: 1150px) {
-        padding-top: 45px;
-        margin: 0;
-    }
-
-    &__bg-icon {
-        position: absolute;
-        z-index: 2.5;
-
-        &--work {
-            top: -11px;
-            right: 17.4px;
-        }
-
-        &--play {
-            top: -14.4px;
-            right: 11px;
-        }
-
-        &--study {
-            top: -6px;
-            right: 17px;
-        }
-
-        &--exercise {
-            top: -0.4px;
-            right: 17.6px;
-        }
-
-        &--social {
-            top: -15px;
-            right: 13.5px;
-        }
-
-        &--self-care {
-            top: -13px;
-            right: 7.2px;
-        }
+        max-width: revert;
+        width: 100%;
     }
 
     &__wrapper {
@@ -60,6 +19,21 @@
             gap: 30px;
             grid-template-columns: repeat(3, 255px);
             grid-template-rows: 244px 244px;
+        }
+    }
+
+    //
+
+    &__top {
+        height: 62px;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        position: relative;
+        bottom: -24px;
+        overflow: hidden;
+
+        @media only screen and (min-width: 1150px) {
+            bottom: 0;
         }
     }
 
@@ -87,6 +61,43 @@
         background-color: #f1c75b;
     }
 
+    &__bg-icon {
+        position: absolute;
+        z-index: 2.5;
+
+        &--work {
+            top: -11px;
+            right: 17.4px;
+        }
+
+        &--play {
+            top: -5px;
+            right: 20px;
+        }
+
+        &--study {
+            top: -6px;
+            right: 20px;
+        }
+
+        &--exercise {
+            top: -0.4px;
+            right: 20px;
+        }
+
+        &--social {
+            top: -15px;
+            right: 13.5px;
+        }
+
+        &--self-care {
+            top: -13px;
+            right: 15px;
+        }
+    }
+
+    //
+
     &__box {
         border-radius: 15px;
         padding: 28px 24px;
@@ -102,8 +113,8 @@
         }
 
         @media only screen and (min-width: 1150px) {
-            padding: 29px 30px 32px 30px;
-            height: 100%;
+            margin-top: -17px;
+            padding: 30px 30px 32px 30px;
         }
     }
 
